chore: use java15 & ZGC