@@ -1,4 +1,4 @@
-FROM openjdk:8-jre
+FROM openjdk:15-slim
 
 ENV TZ=Europe/Oslo
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -6,4 +6,4 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 VOLUME /tmp
 COPY /target/terms-and-conditions.jar app.jar
 
-CMD java -jar $JAVA_OPTS app.jar
+CMD java -jar -XX:+UseZGC $JAVA_OPTS app.jar
